syntax="proto3";

option java_package = "server"; 
option java_outer_classname = "ProductProto";

package product;

service ProductGrpcService {
 rpc GetProductByCode (RequestId) returns (ProductGrpc);
}

message RequestId {
    string code = 1;
}

message ProductGrpc {
    string code = 1;
    string name = 2;
    string size = 3;
    string photo = 4;
    string color = 5;
    bool active = 6;
}